[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colorcraft"
version = "0.3.0"
description = "Convert images to printable coloring pages for kids"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["colorcraft*"]

[project.optional-dependencies]
stability = ["httpx>=0.24.0"]

[project.scripts]
colorcraft = "colorcraft.cli:main"
